# robix

./: .gitignore  .prettierrc  bun.lockb  package-lock.json  package.json  tsconfig.json
.husky/: pre-commit
backend/: .air.toml  Dockerfile  docker-compose.yml
backend/monitoring/prometheus/: prometheus.yml
backend/scripts/: addPlayerToQueue.go  automations.go  generate_jwt_secret.go  go.mod  go.sum
backend/services/game-engine/: go.mod  main.go
backend/services/matchmaking/: .env  go.mod  go.sum  main.go
backend/services/user-service/: .env  go.mod  go.sum  main.go
robix/: Anchor.toml  Cargo.toml  package.json
robix/programs/manager/: Cargo.toml
robix/programs/raffle/: Cargo.toml
robix/programs/raffle/src/: id.rs  lib.rs  raffle_error.rs
robix/programs/raffle/src/constants/: constants.rs
robix/programs/raffle/src/instructions/: mod.rs  raffle_instructions.rs
robix/programs/raffle/src/state/: game_tracker.rs  mod.rs  raffle_account.rs
robix/programs/robix/: Cargo.toml
robix/programs/robix/src/: lib.rs
robix/programs/vrf/: Cargo.toml
robix/programs/wheel/: Cargo.toml
robix/tests/: raffle.ts  robix.ts  vrf.ts
src/pages/: _app.tsx  _document.tsx  index.tsx
src/providers/: connection.provider.tsx  wallet.provider.tsx
src/services/base/: request-interface.ts
src/styles/fonts/: font.config.ts
web/: .env.sample  .gitignore  bun.lockb  next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
web/src/pages/: _app.tsx  _document.tsx  index.tsx
web/src/providers/: connection.provider.tsx  modal.provider.tsx  (+1 more)
(+57 files in other folders)
